[project]
name = "virtuoso-sqlalchemy"
version = "0.1.8"
description = "OpenLink Virtuoso Support for SQLAlchemy"
readme = "README.md"
license = { text = "BSD" }
authors = [
    { name = "OpenLink Software", email = "support@openlinksw.com" }
]
requires-python = ">=3.9"
dependencies = [
    "pyodbc>=4.0.27",
    "sqlalchemy>=1.4",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Database :: Front-Ends",
    "Operating System :: OS Independent"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."sqlalchemy.dialects"]
"virtuoso.pyodbc" = "virtuoso.alchemy:VirtuosoDialect"

[project.urls]
"Homepage" = "https://github.com/OpenLinkSoftware/Virtuoso-SQLAlchemy"
"Source" = "https://github.com/OpenLinkSoftware/Virtuoso-SQLAlchemy"
"Tracker" = "https://github.com/OpenLinkSoftware/Virtuoso-SQLAlchemy/issues"